tests/chainsaw/block-resource-deletion-if-has-prevent-deletion-label/cm-with-prevent-label.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm-with-prevent-label
  labels:
    giantswarm.io/prevent-deletion: "true"
data:
  key: value
